 o imap: Added custom request parsing
 o imap: Added support to the fetch command for UID and SECTION properties
 o imap: Added parsing and verification of the UIDVALIDITY mailbox attribute
 o darwinssl: Make certificate errors less techy
 o imap/pop3/smtp: Added support for the STARTTLS capability
 o checksrc: ban use of sprintf, vsprintf, strcat, strncat and gets

This release includes the following bugfixes:

 o darwinssl: Fix build under Leopard
 o DONE: consider callback-aborted transfers premature [1]
 o ntlm: fix memory leak
 o smtp: Fixed an issue when processing EHLO failure responses
 o pop3: Fixed incorrect return value from pop3_endofresp()
 o pop3: Fixed SASL authentication capability detection
 o pop3: Fixed blocking SSL connect when connecting via POP3S
 o imap: Fixed memory leak when performing multiple selects 
 o nss: fix misplaced code enabling non-blocking socket mode
 o AddFormData: prevent only directories from being posted [2]
 o darwinssl: fix infinite loop if server disconnected abruptly [3]
 o metalink: fix improbable crash parsing metalink filename
 o show proper host name on failed resolve
 o MacOSX-Framework: Make script work in Xcode 4.0 and later
 o strlcat: remove function [4]
 o darwinssl: Fix send glitchiness with data > 32 or so KB [5]
 o polarssl: better 1.1.x and 1.2.x support
 o various documentation improvements
 o multi: NULL pointer reference when closing an unused multi handle [9]
 o SOCKS: fix socks proxy when noproxy matched [7]
 o install-sh: updated to support multiple source files as arguments [6]
 o PolarSSL: added human readable error strings
 o resolver_error: remove wrong error message output
 o docs: updates HTML index and general improvements
 o curlbuild.h.dist: enhance non-configure GCC ABI detection logic
 o sasl: Fixed null pointer reference when decoding empty digest challenge [8]
 o easy: do not ignore poll() failures other than EINTR

This release includes the following known bugs:
